# DevIL

DevIL/: CMakeLists.txt
DevIL/include/IL/: il.h
DevIL/src-IL/: CMakeLists.txt
DevIL/src-IL/include/: il_alloc.h  il_dds.h  il_doompal.h  il_files.h  il_internal.h  il_psd.h  il_q2pal.h  il_stack.h  il_states.h
DevIL/src-IL/src/: il_alloc.cpp  il_convbuff.cpp  il_convert.cpp  il_dds.cpp  il_devil.cpp  il_error.cpp  il_files.cpp  il_gif.cpp  il_icon.cpp  il_iff.cpp  il_internal.cpp  il_jp2.cpp  il_jpeg.cpp  il_ktx.cpp  il_neuquant.cpp  il_pal.cpp  il_pcd.cpp  il_png.cpp  il_pnm.cpp  il_psd.cpp  il_psp.cpp  il_quantizer.cpp  il_register.cpp  il_sgi.cpp  il_size.cpp  il_stack.cpp  il_states.cpp  il_tiff.cpp  il_wdp.cpp
